fix(css): .post-date contrast AA compliant

--- a/css/index.css
+++ b/css/index.css
@@ -470,7 +470,7 @@ h6 {
   display: block;
   margin-top: -0.5rem;
   margin-bottom: 1rem;
-  color: #9a9a9a;
+  color: #737373;
 }
 
 .related {
